kubernetes/nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-srv
spec:
  type: NodePort
  selector:
    app: identityservice
  ports:
  - name: identityservice
    protocol: TCP
    port: 80
    targetPort: 80
