kubernetes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinbase
spec:
  type: NodePort
  selector:
    app: coinbase
  ports:
  - name: coinbase
    protocol: TCP
    port: 80
    targetPort: 80
